@@ -1,3 +1,15 @@
+2019-01-11  Matt Rajca  <mrajca@apple.com>
+
+        Expose preference for site-specific quirks on iOS
+        https://bugs.webkit.org/show_bug.cgi?id=193353
+
+        Reviewed by Dean Jackson.
+
+        * UIProcess/API/Cocoa/WKPreferences.mm:
+        (-[WKPreferences _setNeedsSiteSpecificQuirks:]):
+        (-[WKPreferences _needsSiteSpecificQuirks]):
+        * UIProcess/API/Cocoa/WKPreferencesPrivate.h:
+
 2019-01-14  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [iOS] Expose SPI to access the current sentence boundary and selection state
